time to git some sleep

--- a/python/detection/prep.ipynb
+++ b/python/detection/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -34,12 +34,10 @@
    ],
    "source": [
     "#load data layers\n",
-    "#pts = gpd.read_file('/Users/Zack/Downloads/detections-greece_25_12-25-comp.geojson')\n",
-    "pts = gpd.read_file(\n",
-    "    '/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_01-04.geojson')\n",
-    "\n",
-    "search_area = gpd.read_file('/Users/Zack/0_GIS_Greece/AOI/mask_search_area_50m_5km.shp')\n",
-    "exclusion_zones = gpd.read_file('/Users/Zack/0_GIS_Greece/exclusions/exclusions.geojson')\n",
+    "f = '/Users/Zack/0_GIS_Greece/'\n",
+    "pts = gpd.read_file(f + '/sar_tests_greece/' + 'detections-greece_g25_100m_10-20_01-06.geojson')\n",
+    "search_area = gpd.read_file(f + '/AOI/' + 'mask_search_area_100m_5km.shp')\n",
+    "exclusion_zones = gpd.read_file(f + '/exclusions/' + 'exclusions.geojson')\n",
     "\n",
     "#re-project layers\n",
     "pts = pts.to_crs({'init': 'epsg:2100'})\n",
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -67,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections within search area: 9964\n",
-      "Wall time: 1.77 s\n"
+      "detections within search area: 4374\n",
+      "Wall time: 5.36 s\n"
      ]
     }
    ],
@@ -83,12 +81,13 @@
     "%%time \n",
     "#clip points to search area\n",
     "clip = sjoin(pts, search_area, how='inner', op='within')\n",
-    "print('detections within search area:', len(clip))"
+    "print('detections within search area:', len(clip))\n",
+    "#clip = pts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 24.2 ms\n"
+      "Wall time: 39.6 ms\n"
      ]
     }
    ],
@@ -123,15 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections outside of exclusion zones: 9268\n",
-      "Wall time: 303 ms\n"
+      "detections outside of exclusion zones: 3837\n",
+      "Wall time: 177 ms\n"
      ]
     }
    ],
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -158,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.55 s\n"
+      "Wall time: 736 ms\n"
      ]
     }
    ],
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections after aggregation: 9268\n",
-      "Wall time: 10.9 s\n"
+      "detections after aggregation: 3837\n",
+      "Wall time: 2.72 s\n"
      ]
     }
    ],
@@ -223,27 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.91 s\n"
+      "Wall time: 498 ms\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "#buffer centroids and make square polygons\n",
-    "centroid_buffer = gpd.GeoDataFrame(geometry = centroids.buffer(500))\n",
+    "centroid_buffer = gpd.GeoDataFrame(geometry = centroids.buffer(1))\n",
     "envelope = gpd.GeoDataFrame(geometry = centroid_buffer.envelope)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -308,23 +307,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((24.10679571239714 34.78183287542174,...</td>\n",
+       "      <td>POLYGON ((24.11225574213443 34.7863278126759, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((24.11675510478788 34.79630003200409,...</td>\n",
+       "      <td>POLYGON ((24.04816792471853 34.84042556568266,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((24.11523618957257 34.79672462205158,...</td>\n",
+       "      <td>POLYGON ((24.11896450453242 34.84710151804379,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((24.12060116117349 34.79868074297102,...</td>\n",
+       "      <td>POLYGON ((24.04316925409205 34.85076929235545,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((24.11080457314737 34.7992625216954, ...</td>\n",
+       "      <td>POLYGON ((24.03874093340525 34.85402781900164,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -332,14 +331,14 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "0  POLYGON ((24.10679571239714 34.78183287542174,...\n",
-       "1  POLYGON ((24.11675510478788 34.79630003200409,...\n",
-       "2  POLYGON ((24.11523618957257 34.79672462205158,...\n",
-       "3  POLYGON ((24.12060116117349 34.79868074297102,...\n",
-       "4  POLYGON ((24.11080457314737 34.7992625216954, ..."
+       "0  POLYGON ((24.11225574213443 34.7863278126759, ...\n",
+       "1  POLYGON ((24.04816792471853 34.84042556568266,...\n",
+       "2  POLYGON ((24.11896450453242 34.84710151804379,...\n",
+       "3  POLYGON ((24.04316925409205 34.85076929235545,...\n",
+       "4  POLYGON ((24.03874093340525 34.85402781900164,..."
       ]
      },
-     "execution_count": 146,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,109 +398,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total coordinates (5 per detection): 46340\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>24.106795712397137</td>\n",
-       "      <td>34.78183287542174</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>24.117725438882974</td>\n",
-       "      <td>34.781822796962686</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>24.117738251722326</td>\n",
-       "      <td>34.790840514813304</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>24.106807335687744</td>\n",
-       "      <td>34.79085059663842</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>24.106795712397137</td>\n",
-       "      <td>34.78183287542174</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    x                   y  id\n",
-       "0  24.106795712397137   34.78183287542174   0\n",
-       "1  24.117725438882974  34.781822796962686   0\n",
-       "2  24.117738251722326  34.790840514813304   0\n",
-       "3  24.106807335687744   34.79085059663842   0\n",
-       "4  24.106795712397137   34.78183287542174   0"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#combine x/y point groups\n",
-    "coord_all = []\n",
-    "for i in range(len(coord_list)):\n",
-    "    coord_group = coord(coord_list[i])\n",
-    "    coord_group['id']=i\n",
-    "    coord_all.append(coord_group)\n",
+    "# #combine x/y point groups\n",
+    "# coord_all = []\n",
+    "# for i in range(len(coord_list)):\n",
+    "#     coord_group = coord(coord_list[i])\n",
+    "#     coord_group['id']=i\n",
+    "#     coord_all.append(coord_group)\n",
     "    \n",
-    "targets = pd.concat(coord_all)\n",
-    "print('total coordinates (5 per detection):', len(targets))\n",
-    "targets.head()"
+    "# targets = pd.concat(coord_all)\n",
+    "# print('total coordinates (5 per detection):', len(targets))\n",
+    "# targets.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -520,11 +437,11 @@
      "output_type": "stream",
      "text": [
       "total detections: 10041\n",
-      "detections in search area: 9268\n",
+      "detections in search area: 3837\n",
       "farm sites: 252\n",
-      "matches: 353\n",
-      "positive matches 1.401\n",
-      "overall accuracy 0.038\n"
+      "matches: 303\n",
+      "positive matches 1.202\n",
+      "overall accuracy 0.079\n"
      ]
     }
    ],
@@ -558,11 +475,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "centroids_test.to_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_01-04.shp')"
+    "centroids_test.to_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_10-20_01-06.shp')"
    ]
   }
  ],
