today was a colorful day

--- a/python/detection/0_prep.ipynb
+++ b/python/detection/0_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {
     "scrolled": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "detections within search area: 4374\n",
-      "Wall time: 5.36 s\n"
+      "Wall time: 4.89 s\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 39.6 ms\n"
+      "Wall time: 17.5 ms\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "detections outside of exclusion zones: 3837\n",
-      "Wall time: 177 ms\n"
+      "Wall time: 152 ms\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 736 ms\n"
+      "Wall time: 548 ms\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
      "output_type": "stream",
      "text": [
       "detections after aggregation: 3837\n",
-      "Wall time: 2.72 s\n"
+      "Wall time: 3.25 s\n"
      ]
     }
    ],
@@ -222,27 +222,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 498 ms\n"
+      "Wall time: 478 ms\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "#buffer centroids and make square polygons\n",
-    "centroid_buffer = gpd.GeoDataFrame(geometry = centroids.buffer(1))\n",
+    "#centroids = clip2\n",
+    "centroid_buffer = gpd.GeoDataFrame(geometry = centroids.buffer(2.5))\n",
     "envelope = gpd.GeoDataFrame(geometry = centroid_buffer.envelope)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {
     "scrolled": false
    },
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -307,23 +308,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((24.11225574213443 34.7863278126759, ...</td>\n",
+       "      <td>POLYGON ((24.11223932833176 34.78631430121413,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((24.04816792471853 34.84042556568266,...</td>\n",
+       "      <td>POLYGON ((24.04815151061774 34.84041204569806,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((24.11896450453242 34.84710151804379,...</td>\n",
+       "      <td>POLYGON ((24.1189480775512 34.84708800764906, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((24.04316925409205 34.85076929235545,...</td>\n",
+       "      <td>POLYGON ((24.04315283875234 34.8507557717204, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((24.03874093340525 34.85402781900164,...</td>\n",
+       "      <td>POLYGON ((24.03872451814163 34.85401429777621,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -331,14 +332,14 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "0  POLYGON ((24.11225574213443 34.7863278126759, ...\n",
-       "1  POLYGON ((24.04816792471853 34.84042556568266,...\n",
-       "2  POLYGON ((24.11896450453242 34.84710151804379,...\n",
-       "3  POLYGON ((24.04316925409205 34.85076929235545,...\n",
-       "4  POLYGON ((24.03874093340525 34.85402781900164,..."
+       "0  POLYGON ((24.11223932833176 34.78631430121413,...\n",
+       "1  POLYGON ((24.04815151061774 34.84041204569806,...\n",
+       "2  POLYGON ((24.1189480775512 34.84708800764906, ...\n",
+       "3  POLYGON ((24.04315283875234 34.8507557717204, ...\n",
+       "4  POLYGON ((24.03872451814163 34.85401429777621,..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,36 +399,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total coordinates (5 per detection): 19185\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>24.112239328331757</td>\n",
+       "      <td>34.78631430121413</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>24.112293979922967</td>\n",
+       "      <td>34.786314250813454</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>24.11229404102816</td>\n",
+       "      <td>34.786359339411284</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>24.11223938940721</td>\n",
+       "      <td>34.78635938981202</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>24.112239328331757</td>\n",
+       "      <td>34.78631430121413</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    x                   y  id\n",
+       "0  24.112239328331757   34.78631430121413   0\n",
+       "1  24.112293979922967  34.786314250813454   0\n",
+       "2   24.11229404102816  34.786359339411284   0\n",
+       "3   24.11223938940721   34.78635938981202   0\n",
+       "4  24.112239328331757   34.78631430121413   0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# #combine x/y point groups\n",
-    "# coord_all = []\n",
-    "# for i in range(len(coord_list)):\n",
-    "#     coord_group = coord(coord_list[i])\n",
-    "#     coord_group['id']=i\n",
-    "#     coord_all.append(coord_group)\n",
+    "coord_all = []\n",
+    "for i in range(len(coord_list)):\n",
+    "    coord_group = coord(coord_list[i])\n",
+    "    coord_group['id']=i\n",
+    "    coord_all.append(coord_group)\n",
     "    \n",
-    "# targets = pd.concat(coord_all)\n",
-    "# print('total coordinates (5 per detection):', len(targets))\n",
-    "# targets.head()"
+    "targets = pd.concat(coord_all)\n",
+    "print('total coordinates (5 per detection):', len(targets))\n",
+    "targets.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#targets.to_csv ('/Users/Zack/Desktop/test.csv', index = None, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -475,11 +549,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "centroids_test.to_file('/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_10-20_01-06.shp')"
+    "#centroids_test.to_file(f + '/sar_tests_greece/' + 'detections-greece_g25_100m_10-20_01-06.shp')\n",
+    "#targets.to_csv ('/Users/Zack/Desktop/g25_100m_10-20_01-06_5m.csv', index = None, header=True)"
    ]
   }
  ],
