this is the way

--- a/python/detection/geojson_to_shp.ipynb
+++ b/python/detection/geojson_to_shp.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "file = gpd.read_file(\n",
-    "    '/Users/Zack/0_GIS_Greece/exclusions/exclusions.shp')\n",
+    "    '/Users/Zack/Desktop/buffer.geojson')\n",
+    "    #'/Users/Zack/0_GIS_Greece/exclusions/exclusions.shp')\n",
     "\n",
     "file.to_file(\n",
-    "    '/Users/Zack/0_GIS_Greece/exclusions/exclusions.geojson', driver=\"GeoJSON\")\n"
+    "    #'/Users/Zack/0_GIS_Greece/exclusions/exclusions.geojson', driver=\"GeoJSON\")\n",
+    "    '/Users/Zack/Desktop/buffer.shp')\n"
    ]
   }
  ],
