--- a/python/detection/0_prep.ipynb
+++ b/python/detection/0_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,16 @@
     "import geopandas as gpd\n",
     "from geopandas.tools import sjoin\n",
     "\n",
+    "from shapely.geometry import mapping\n",
     "from shapely.geometry.polygon import Polygon\n",
     "from shapely.geometry.multipolygon import MultiPolygon\n",
-    "from shapely.geometry import mapping\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -28,16 +28,17 @@
      "text": [
       "detections 10041 {'init': 'epsg:2100'}\n",
       "search area 1 {'init': 'epsg:2100'}\n",
-      "exclusion zones 2 {'init': 'epsg:2100'}\n"
+      "exclusion zones 12 {'init': 'epsg:2100'}\n"
      ]
     }
    ],
    "source": [
     "#load data layers\n",
     "f = '/Users/Zack/0_GIS_Greece/'\n",
-    "pts = gpd.read_file(f + '/sar_tests_greece/' + 'detections-greece_g25_100m_10-20_01-06.geojson')\n",
-    "search_area = gpd.read_file(f + '/AOI/' + 'mask_search_area_100m_5km.shp')\n",
-    "exclusion_zones = gpd.read_file(f + '/exclusions/' + 'exclusions.geojson')\n",
+    "pts = gpd.read_file(f + '/sar_tests_greece/detections-greece_g25_100m_10-20_01-06.geojson')\n",
+    "search_area = gpd.read_file(f + '/AOI/mask_search_area_100m_5km.shp')\n",
+    "exclusion_zones = gpd.read_file(f + '/exclusions/exclusions_2019-01-07.geojson')\n",
+    "farm_sites = gpd.read_file(f + '/blue_bridge/fishcages_Greece_farm_polygons.shp')\n",
     "\n",
     "#re-project layers\n",
     "pts = pts.to_crs({'init': 'epsg:2100'})\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 152,
    "metadata": {
     "scrolled": false
    },
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +74,7 @@
      "output_type": "stream",
      "text": [
       "detections within search area: 4374\n",
-      "Wall time: 2.78 s\n"
+      "Wall time: 3.08 s\n"
      ]
     }
    ],
@@ -81,13 +82,12 @@
     "%%time \n",
     "#clip points to search area\n",
     "clip = sjoin(pts, search_area, how='inner', op='within')\n",
-    "print('detections within search area:', len(clip))\n",
-    "#clip = pts"
+    "print('detections within search area:', len(clip))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 154,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 155,
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 8 ms\n"
+      "Wall time: 20.9 ms\n"
      ]
     }
    ],
@@ -122,15 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections outside of exclusion zones: 3837\n",
-      "Wall time: 84 ms\n"
+      "detections outside of exclusion zones: 3389\n",
+      "Wall time: 395 ms\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 157,
    "metadata": {
     "scrolled": true
    },
@@ -157,28 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 322 ms\n"
+      "Wall time: 433 ms\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "#buffer points, dissolve buffers to aggregate points near each other\n",
-    "buffer = gpd.GeoDataFrame(geometry = clip2.buffer(1)) #250 meters\n",
+    "buffer = gpd.GeoDataFrame(geometry = clip2.buffer(10))\n",
     "buffer['Dissolve'] = 0\n",
     "buffer_dis = buffer.dissolve(by='Dissolve')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections after aggregation: 3837\n",
-      "Wall time: 1.47 s\n"
+      "detections after aggregation: 3370\n",
+      "Wall time: 3.5 s\n"
      ]
     }
    ],
@@ -222,27 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 198 ms\n"
+      "Wall time: 282 ms\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "#buffer centroids and make square polygons\n",
-    "centroid_buffer = gpd.GeoDataFrame(geometry = centroids.buffer(2.5))\n",
+    "centroid_buffer = gpd.GeoDataFrame(geometry = centroids.buffer(50))\n",
     "envelope = gpd.GeoDataFrame(geometry = centroid_buffer.envelope)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 162,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 163,
    "metadata": {
     "scrolled": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -307,23 +307,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((24.11223932833176 34.78631430121413,...</td>\n",
+       "      <td>POLYGON ((24.11171956068231 34.78588643709224,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((24.04815151061774 34.84041204569806,...</td>\n",
+       "      <td>POLYGON ((24.04763173353524 34.83998391168871,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((24.1189480775512 34.84708800764906, ...</td>\n",
+       "      <td>POLYGON ((24.11842789258962 34.8466601773142, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((24.04315283875234 34.8507557717204, ...</td>\n",
+       "      <td>POLYGON ((24.04263302243896 34.85032761711435,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((24.03872451814163 34.85401429777621,...</td>\n",
+       "      <td>POLYGON ((24.03820470423825 34.85358612447433,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -331,14 +331,14 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "0  POLYGON ((24.11223932833176 34.78631430121413,...\n",
-       "1  POLYGON ((24.04815151061774 34.84041204569806,...\n",
-       "2  POLYGON ((24.1189480775512 34.84708800764906, ...\n",
-       "3  POLYGON ((24.04315283875234 34.8507557717204, ...\n",
-       "4  POLYGON ((24.03872451814163 34.85401429777621,..."
+       "0  POLYGON ((24.11171956068231 34.78588643709224,...\n",
+       "1  POLYGON ((24.04763173353524 34.83998391168871,...\n",
+       "2  POLYGON ((24.11842789258962 34.8466601773142, ...\n",
+       "3  POLYGON ((24.04263302243896 34.85032761711435,...\n",
+       "4  POLYGON ((24.03820470423825 34.85358612447433,..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 167,
    "metadata": {
     "scrolled": true
    },
@@ -407,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total coordinates (5 per detection): 19185\n"
+      "total coordinates (4 per detection): 16850\n"
      ]
     },
     {
@@ -439,32 +439,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>24.112239328331757</td>\n",
-       "      <td>34.78631430121413</td>\n",
+       "      <td>24.111719560682307</td>\n",
+       "      <td>34.78588643709224</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>24.112293979922967</td>\n",
-       "      <td>34.786314250813454</td>\n",
+       "      <td>24.112812586856226</td>\n",
+       "      <td>34.785885429094854</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>24.11229404102816</td>\n",
-       "      <td>34.786359339411284</td>\n",
+       "      <td>24.112813814610483</td>\n",
+       "      <td>34.78678720103546</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>24.11223938940721</td>\n",
-       "      <td>34.78635938981202</td>\n",
+       "      <td>24.111720776541077</td>\n",
+       "      <td>34.78678820906649</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>24.112239328331757</td>\n",
-       "      <td>34.78631430121413</td>\n",
+       "      <td>24.111719560682307</td>\n",
+       "      <td>34.78588643709224</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -473,14 +473,14 @@
       ],
       "text/plain": [
        "                    x                   y  id\n",
-       "0  24.112239328331757   34.78631430121413   0\n",
-       "1  24.112293979922967  34.786314250813454   0\n",
-       "2   24.11229404102816  34.786359339411284   0\n",
-       "3   24.11223938940721   34.78635938981202   0\n",
-       "4  24.112239328331757   34.78631430121413   0"
+       "0  24.111719560682307   34.78588643709224   0\n",
+       "1  24.112812586856226  34.785885429094854   0\n",
+       "2  24.112813814610483   34.78678720103546   0\n",
+       "3  24.111720776541077   34.78678820906649   0\n",
+       "4  24.111719560682307   34.78588643709224   0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,13 +494,13 @@
     "    coord_all.append(coord_group)\n",
     "    \n",
     "targets = pd.concat(coord_all)\n",
-    "print('total coordinates (5 per detection):', len(targets))\n",
+    "print('total coordinates (4 per detection):', len(targets))\n",
     "targets.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 168,
    "metadata": {
     "scrolled": true
    },
@@ -510,19 +510,16 @@
      "output_type": "stream",
      "text": [
       "total detections: 10041\n",
-      "detections in search area: 3837\n",
+      "detections in search area: 3370\n",
       "farm sites: 252\n",
-      "matches: 303\n",
-      "positive matches 1.202\n",
-      "overall accuracy 0.079\n"
+      "matches: 291\n",
+      "positive matches 1.155\n",
+      "overall accuracy 0.086\n"
      ]
     }
    ],
    "source": [
     "#accuracy check\n",
-    "farm_sites = gpd.read_file('/Users/Zack/0_GIS_Greece/blue_bridge/fishcages_Greece_farm_polygons.shp')\n",
-    "#farm_sites = gpd.read_file('/Users/Zack/0_GIS_Greece/sar_threshold_tests/farmsites_notio.shp')\n",
-    "\n",
     "centroids_test = centroids.copy()\n",
     "centroids_test.crs = {'init' :'epsg:2100'}\n",
     "centroids_test['geometry'] = centroids_test['geometry'].to_crs(epsg=4326)\n",
@@ -548,17 +545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#centroids_test.crs = {'init' :'epsg:4326'}\n",
-    "#centroids_test.to_file(f + '/sar_tests_greece/' + 'g25_100m_10-20_01-06.shp')\n",
-    "#centroids_test.to_file(f + '/sar_tests_greece/' + 'g25_100m_10-20_01-06.geojson', driver='GeoJSON')\n",
-    "# targets_5m.to_csv(\n",
-    "#     '/Users/Zack/0_seawarden/python/detection/g25_100m_10-20_01-06_5m.csv', index = None, header=True)\n",
-    "# targets.to_csv(\n",
-    "#     '/Users/Zack/0_seawarden/python/detection/g25_100m_10-20_01-06_500m.csv', index = None, header=True)"
+    "# centroids_test.crs = {'init' :'epsg:4326'}\n",
+    "# centroids_test.to_file(f + '/sar_tests_greece/' + 'g25_100m_10-20_01-06.shp')\n",
+    "# centroids_test.to_file(f + '/sar_tests_greece/' + 'g25_100m_10-20_01-06.geojson', driver='GeoJSON')\n",
+    "\n",
+    "# out = '/Users/Zack/0_seawarden/python/detection/'\n",
+    "# targets.to_csv(out + 'g25_100m_10-20_01-06_100m.csv', index = None, header=True)"
    ]
   }
  ],
