--- a/python/detection/geojson_to_shp.ipynb
+++ b/python/detection/geojson_to_shp.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import geopandas as gpd\n",
     "file = gpd.read_file(\n",
-    "    '/Users/Zack/Desktop/buffer.geojson')\n",
+    "    '/Users/Zack/0_GIS_Greece/sar_tests_greece/detections-greece_g25_100m_10-20_01-06.shp'\n",
+    "    #/buffer.geojson')\n",
     "    #'/Users/Zack/0_GIS_Greece/exclusions/exclusions.shp')\n",
     "\n",
     "file.to_file(\n",
